<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenVoice</string>
    <string name="by_footer_no_more" />
    <string name="empty_string" translatable="false" />
    <string name="asterisk" translatable="false">*</string>
    <string name="post_username_format" translatable="false">\@%s</string>
    <string name="title_tag" translatable="false">#%s</string>
    <string name="wallet_name_metamask" translatable="false">Metamask</string>
    <string name="wallet_name_trust" translatable="false">Trust Wallet</string>
    <string name="wallet_name_rainbow" translatable="false">Rainbow</string>
    <string name="by_footer_load_failed">加载失败，请点我重试</string>
    <string name="by_footer_loading">努力加载中…</string>
    <string name="by_header_hint_normal">下拉刷新</string>
    <string name="by_header_hint_release">松开刷新</string>
    <string name="by_refresh_done">刷新完成</string>
    <string name="by_refreshing">刷新中…</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message" translatable="false">FCM Message</string>
    <string name="follow">关注</string>
    <string name="trends_for_you">推荐</string>
    <string name="transaction">交易</string>
    <string name="notifications">通知</string>
    <string name="speed">倍速</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="button_default">系统默认</string>
    <string name="desc_sure_exit">确定退出登录吗？</string>
    <string name="desc_wilderness">一片荒芜～</string>
    <string name="desc_set_language">设置语言</string>
    <string name="tittle_update">应用更新\n%s</string>
    <string name="desc_contact_us">加入社区</string>
    <string name="desc_follow_me">关注了我</string>
    <string name="desc_sure_unfollow">确定取消关注吗？</string>
    <string name="tips_reset_succ">重置成功</string>
    <string name="tips_change_pwd">你已经修改了你的密码</string>
    <string name="followers">关注者</string>
    <string name="desc_products">Open Voice是一款基于web3.0理念打造的声音社交软件，利用声音克隆技术每个人都可以创建独一无二的声音NFT并赋予其价值，声音将像图片、音乐、视频、3D模型、电子票证和数字纪念品一样成为特殊的NFT进行价值流转，同时可使用拥有的声音NFT进行内容创作，建立独特的社交圈。</string>
    <string name="edit">编辑</string>
    <string name="announcements">公告</string>
    <string name="preferences">设置</string>
    <string name="Settting">设置</string>
    <string name="blacklist">黑名单</string>
    <string name="login_out">退出登录</string>
    <string name="your_account">你的账号</string>
    <string name="change_pwd">修改密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="enter_oldpwd">请输入旧密码</string>
    <string name="newpwd">新密码</string>
    <string name="tips_newpwd">请输入新密码</string>
    <string name="desc_verify_newpwd">验证新密码</string>
    <string name="enter_newpwd_again">请再次输入新密码</string>
    <string name="pwd_error">请输入6–16位英文、数字密码组合</string>
    <string name="password_disaccord">两次输入的密码不一致</string>
    <string name="language">界面语言 (%s)</string>
    <string name="clear_cache">清除缓存</string>
    <string name="tips_clear_cache">清除缓存？</string>
    <string name="check_updates">检查更新</string>
    <string name="live_update">立即更新</string>
    <string name="about_us">关于我们</string>
    <string name="wechat">Discord</string>
    <string name="weibo">Twitter</string>
    <string name="business_contact">Telegram</string>
    <string name="edit_data">编辑资料</string>
    <string name="name">昵称</string>
    <string name="following">正在关注</string>
    <string name="model">模型</string>
    <string name="reply">有回复</string>
    <string name="media">媒体</string>
    <string name="button_unfollow">取消关注</string>
    <string name="login">登录</string>
    <string name="button_go_back">返回</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="no_account_regist">没有账号？</string>
    <string name="sign_up">欢迎来到Openvoice</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="birthday">生日</string>
    <string name="hava_account_login">已经有账号？</string>
    <string name="remind_agree_our_terms">通过创建帐户您必须同意我们的条件.</string>
    <string name="set_pwd">设置密码</string>
    <string name="format_pwd">长度为6–16位，由字母和数字组成，区分大小写</string>
    <string name="owner">拥有者:</string>
    <string name="model_name">模型名称:</string>
    <string name="buy">购买</string>
    <string name="creation">创作</string>
    <string name="official">官方</string>
    <string name="original">原创</string>
    <string name="button_use">使用</string>
    <string name="model_generating">生成中</string>
    <string name="model_fail">生成失败</string>
    <string name="recording_note_1">1.声音定制需要先录音，请在特别安静的环境下录制，确保无他人千扰或不当录音行为；</string>
    <string name="recording_note_2">2.请用普通话朗读，保持平稳性且吐字清楚；</string>
    <string name="recording_note_3">3.录制时请与手机保持10CM的距离；</string>
    <string name="recording_note_4">4.录制时，点击录音按钮停顿1秒后再读，效果会更棒哦。</string>
    <string name="button_start_recording">开始录制</string>
    <string name="recording_considerations">录制注意事项</string>
    <string name="sound_recording">声音录制</string>
    <string name="recording_progress">录制进度: %d/6</string>
    <string name="recording_complete">录制完成</string>
    <string name="price_setting_explain">声音录制完成，请设置模型出售价格</string>
    <string name="select_currency">请设置出售货币类型</string>
    <string name="desc_price_setting">提醒: \n此价格为预设价格，在发生交易时生效，交易时会扣除燃气费和平台服务费，所以该价格并非你获得的实际收益</string>
    <string name="button_next">下一步</string>
    <string name="recording_text">The North Wind and the Sun were disputing which was the stronger, when a traveler came along wrapped in a warm cloak.</string>
    <string name="recording_text2">They agreed that the one who first succeeded in making the traveler take his cloak off should be considered stronger than the other.</string>
    <string name="recording_text3">Then the North Wind blew as hard as he could, but the more he blew the more closely did the traveler fold his cloak around him; and at last the North Wind gave up the attempt.</string>
    <string name="recording_text4">Then the Sun shined out warmly, and immediately the traveler took off his cloak.</string>
    <string name="recording_text5">And so the North Wind was obliged to confess that the Sun was the stronger of the two.</string>
    <string name="start_recording">点击开始录音，暂停即完成</string>
    <string name="years_ago">%d 年前</string>
    <string name="days_ago">%d 天前</string>
    <string name="hours_ago">%d 小时前</string>
    <string name="minutes_ago">%d 分钟前</string>
    <string name="seconds_ago">%d 秒前</string>
    <string name="collections">收藏</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="report">举报</string>
    <string name="delete">删除</string>
    <string name="delete_edit">删除并重新编辑</string>
    <string name="cancel_topping">取消置顶</string>
    <string name="top">置顶</string>
    <string name="sure_delete_voiceover">删除这条声文？</string>
    <string name="delete_edit_voiceover">删除并重新编辑这条声文？</string>
    <string name="remind_black_list">确定将 @%s加入黑名单？</string>
    <string name="tips_Input_content">请输入发布内容哦~</string>
    <string name="audio_failure">发文不低于5个字，否则无法生成音频！</string>
    <string name="drafts">草稿箱</string>
    <string name="tips_save_draft">是否保存为草稿？</string>
    <string name="save">保存</string>
    <string name="usage_model">正在使用:</string>
    <string name="desc_input_content">请输入您想发表的内容，可以通过“修改模型”创作您特有的语音呦！</string>
    <string name="button_edit_model">修改模型</string>
    <string name="button_submit">提交</string>
    <string name="tips_set_price">请设置模型价格</string>
    <string name="wait_model_generation">请等待模型生成</string>
    <string name="abandon_submit">返回将导致模型生成失败，确定要放弃吗？</string>
    <string name="tips_delete_draft">确定删除草稿吗？</string>
    <string name="sure_delete_model">删除该模型后不可恢复，确定要删除吗？</string>
    <string name="my_model">我的模型</string>
    <string name="transaction_history">交易记录</string>
    <string name="tab_likes">喜欢</string>
    <string name="set_price">价格设置</string>
    <string name="by">来源:</string>
    <string name="current_price">当前价格:</string>
    <string name="set_price_sign">价格设置:</string>
    <string name="tips_Input_price">请填写价格</string>
    <string name="select_your_model">选择声音模型</string>
    <string name="voiceover">声文</string>
    <string name="tips_remove_blacklist">确定移除黑名单吗？</string>
    <string name="button_photograph">拍照</string>
    <string name="button_upload_pictures">图片/视频</string>
    <string name="tips_file_upload">文件上传中，请稍后…</string>
    <string name="tips_publish_fail">声文发送失败！</string>
    <string name="desc_blank_draft">您没有草稿。</string>
    <string name="desc_blank_follow">您没有关注的用户</string>
    <string name="status_used">已使用</string>
    <string name="tips_reply">回复 @%s</string>
    <string name="desc_jurisdiction_open">所有人可见</string>
    <string name="desc_jurisdiction_private">仅个人主页可见</string>
    <string name="desc_jurisdiction_followers">仅关注者可见</string>
    <string name="desc_jurisdiction_letter">仅提及用户可见</string>
    <string name="button_continue">继续</string>
    <string name="report_users">举报@%s</string>
    <string name="report_introduction">您可以在下面提供有关举报此账户的原因说明:</string>
    <string name="desc_Additional_comment">附加说明</string>
    <string name="report_users_succ">成功举报@%s</string>
    <string name="button_report_done">完成</string>
    <string name="own">已拥有</string>
    <string name="tips_invalid_email">请输入正确邮箱</string>
    <string name="tips_length_exceeded">用户名长度为6–30位，且必须包含字母</string>
    <string name="username">用户名</string>
    <string name="tips_succ_application">注册成功</string>
    <string name="tips_email_activation">账号注册成功，请前往登录</string>
    <string name="desc_code">验证码</string>
    <string name="desc_code_email">我们已经发送一个验证码至 %s.</string>
    <string name="tips_succ_blocked">拉黑成功，可在我的-黑名单中查看</string>
    <string name="search">搜索</string>
    <string name="desc_account">账号</string>
    <string name="tab_postes">声文</string>
    <string name="tab_topics">话题</string>
    <string name="tab_model">模型</string>
    <string name="clean">清空</string>
    <string name="filter">分类</string>
    <string name="desc_all">全部</string>
    <string name="desc_attention_notice">关注了你</string>
    <string name="desc_submit_notice">模型名称:%s提交成功并正在生成中</string>
    <string name="desc_generate_succ">模型名称:%s生成成功</string>
    <string name="desc_generate_fail">模型名称:%s生成失败</string>
    <string name="desc_buy_succ">模型名称:%s购买成功</string>
    <string name="desc_buy_fail">模型名称:%s出售成功</string>
    <string name="notice_succ">成功</string>
    <string name="notice_fail">失败</string>
    <string name="notice_purchased">已购买</string>
    <string name="notice_sold">已出售</string>
    <string name="mention">提及</string>
    <string name="extrapolation">转推</string>
    <string name="model_submit">模型提交</string>
    <string name="model_generation_succ">模型生成成功</string>
    <string name="model_generation_failed">模型生成失败</string>
    <string name="model_sold_succ">模型出售成功</string>
    <string name="model_purchase_succ">模型购买成功</string>
    <string name="tips_clear_notification">你确定要永久清空通知列表吗？</string>
    <string name="pwd_setting_succ">密码设置成功</string>
    <string name="model_details">模型详情</string>
    <string name="desc_last_bid">最后交易:</string>
    <string name="deleted">已删除</string>
    <string name="tab_sell">出售</string>
    <string name="tab_use">使用</string>
    <string name="twenty_four">24小时</string>
    <string name="desc_supported_languages">声音引擎暂时只支持英语转换！</string>
    <string name="desc_create_wallet">如果您还没有钱包，您可以选择一个提供商，下载应用程序，然后立即创建一个钱包</string>
    <string name="desc_chat_leading1">欢迎来到VOVO，问我任何问题！</string>
    <string name="desc_chat_leading2">需要一些例子吗尝试要求VOVO：</string>
    <string name="desc_chat_leading3">写一封电子邮件、短篇小说或短文</string>
    <string name="desc_chat_leading4">创建博客或社交媒体帖子</string>
    <string name="desc_chat_leading5">拿出晚餐的食谱</string>
    <string name="desc_chat_leading6">将文本翻译成另一种语言</string>
    <string name="desc_chat_leading7">为下一个项目提出想法</string>
    <string name="desc_send">发送消息</string>
    <string name="send">发送</string>
</resources>