<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/common_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- 注意事项说明 -->
    <com.shannon.android.lib.components.ShapeableConstraintLayout
        android:id="@+id/sclPrecautions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_status_model"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
        app:shapeAppearance="@style/roundedCornerImageStyle4">

        <ImageView
            android:id="@+id/ivPrecautions"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_opv_precautions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stPrecautions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:gravity="left"
            android:text="@string/desc_supported_languages"
            android:textColor="?attr/textColorPrimary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivPrecautions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivPrecautions"
            app:layout_constraintTop_toTopOf="@+id/ivPrecautions" />
    </com.shannon.android.lib.components.ShapeableConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sclPrecautions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recording_note_1"
                android:textColor="?attr/textColorPrimary"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/recording_note_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recording_note_2"
                android:textColor="?attr/textColorPrimary"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/recording_note_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recording_note_3"
                android:textColor="?attr/textColorPrimary"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/recording_note_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recording_note_4"
                android:textColor="?attr/textColorPrimary"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/recording_note_4"
                app:shapeAppearance="@style/roundedCornerImageStyle8" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.shannon.android.lib.components.ShapeableButton
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_button_primary_background"
        android:text="@string/button_start_recording"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/roundedCornerImageStyle26" />

</androidx.constraintlayout.widget.ConstraintLayout>