<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_1f1f1f_r24"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/button_photograph"
            android:paddingHorizontal="28dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/icon_take_photo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_0DFFFFFF" />

        <TextView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="28dp"
            android:text="@string/button_upload_pictures"
            android:textColor="?android:textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/icon_open_gallery" />


    </LinearLayout>

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_1f1f1f_r24"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_EC5143"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>